--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
