--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "gsap": "^3.12.2",
     "pinia": "^2.1.3",
     "vee-validate": "^4.11.7",
     "vue": "^3.3.4",
